--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,10 @@
     <application
             android:name=".app.TPOApplication"
             android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@drawable/logo_form"
             android:label="@string/app_name"
             android:usesCleartextTraffic="true"
-            android:roundIcon="@mipmap/ic_launcher_round"
+            android:roundIcon="@drawable/app_logo_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity android:name="com.tpo_hr.tpohr.views.activities.main.MainActivity">
