--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,10 +3,10 @@
           package="com.tpo_hr.tpohr">
 
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-feature android:name="android.hardware.camera" android:required="false" />
-    <uses-feature android:name="android.hardware.camera.front" android:required="false" />
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-feature android:name="android.hardware.camera" android:required="false"/>
+    <uses-feature android:name="android.hardware.camera.front" android:required="false"/>
 
     <application
             android:name=".app.TPOApplication"
@@ -17,17 +17,20 @@
             android:roundIcon="@drawable/app_logo_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name="com.tpo_hr.tpohr.views.activities.main.MainActivity">
+        <activity android:name="com.tpo_hr.tpohr.views.activities.main.MainActivity"
+                  android:screenOrientation="portrait">
 
         </activity>
-        <activity android:name="com.tpo_hr.tpohr.views.activities.splash.SplashScreenActivity">
+        <activity android:name="com.tpo_hr.tpohr.views.activities.splash.SplashScreenActivity"
+                  android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="com.tpo_hr.tpohr.views.activities.slide.SlideActivity">
+        <activity android:name="com.tpo_hr.tpohr.views.activities.slide.SlideActivity"
+                  android:screenOrientation="portrait">
         </activity>
     </application>
 
